[ci skip] simplify reliability diagram b229bb6fa31a63709821ac40c0604d8b0343438c

--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "978c101f",
+   "id": "5e5c4aa3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0da59545",
+   "id": "ff2bafb5",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47ee6041",
+   "id": "ec132a87",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5dbe156",
+   "id": "60a7e976",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5238d089",
+   "id": "37a92475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "752a786f",
+   "id": "c262049f",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6bcb5ec",
+   "id": "4274f18f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b20671d6",
+   "id": "65ab81ee",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce35456c",
+   "id": "874821c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0742d36",
+   "id": "22e99d96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f60ad5e9",
+   "id": "40f90f4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ce46ff0",
+   "id": "aeb8ece8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae22665d",
+   "id": "8c7b2a89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38ec0884",
+   "id": "f2d04375",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b7c5e73",
+   "id": "35e0d234",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a78fd94d",
+   "id": "0cbafefe",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50e7fb48",
+   "id": "682414de",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119df883",
+   "id": "f080bfd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeb5bc97",
+   "id": "aa5ebadd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd1741c6",
+   "id": "ca830c91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f42ac5b",
+   "id": "f22d8ece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ed9e494",
+   "id": "0833897f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24b6c703",
+   "id": "4971a711",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4ea527f",
+   "id": "47afeb81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbb63661",
+   "id": "036fecc4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f34bb097",
+   "id": "871b0ce4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b99b5754",
+   "id": "e941f50d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8611b0a7",
+   "id": "72d20e0b",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba9fa48a",
+   "id": "d2cddb60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f20403bf",
+   "id": "2fe522e7",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4789d351",
+   "id": "54043df2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ae44a8f",
+   "id": "42ec6aa3",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa8ebe44",
+   "id": "12425e9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e385b57c",
+   "id": "bfe84d9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ed9183f",
+   "id": "1403ff8c",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a92426ca",
+   "id": "05c61145",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61090ec6",
+   "id": "2499cfb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c40e9974",
+   "id": "5066b46f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3f0dea",
+   "id": "7b8ed9a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99c13b59",
+   "id": "0a93ddc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c966754e",
+   "id": "acabcb74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e3dae1a",
+   "id": "f5b9bdfb",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4189989",
+   "id": "a4ca0f5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,10 +866,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d05d736d",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "5a4495d3",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import make_scorer, mean_absolute_percentage_error, get_scorer\n",
@@ -894,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5821490b",
+   "id": "18832729",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "149c60a4",
+   "id": "4935fb09",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -948,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9883e001",
+   "id": "5786e262",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,24 +955,14 @@
     "\n",
     "def plot_reliability_diagram(cv_predictions, n_bins=10):\n",
     "    # min and max load over all predictions and observations for any folds:\n",
-    "    min_load = np.min(\n",
+    "    all_loads = pl.concat(\n",
     "        [\n",
-    "            min(\n",
-    "                cv_prediction[\"load_mw\"].min(),\n",
-    "                cv_prediction[\"predicted_load_mw\"].min(),\n",
-    "            )\n",
+    "            cv_prediction.select([\"load_mw\", \"predicted_load_mw\"])\n",
     "            for cv_prediction in cv_predictions\n",
     "        ]\n",
     "    )\n",
-    "    max_load = np.max(\n",
-    "        [\n",
-    "            max(\n",
-    "                cv_prediction[\"load_mw\"].max(),\n",
-    "                cv_prediction[\"predicted_load_mw\"].max(),\n",
-    "            )\n",
-    "            for cv_prediction in cv_predictions\n",
-    "        ]\n",
-    "    )\n",
+    "    all_loads = pl.concat(all_loads[\"load_mw\", \"predicted_load_mw\"])\n",
+    "    min_load, max_load = all_loads.min(), all_loads.max()\n",
     "    scale = altair.Scale(domain=[min_load, max_load])\n",
     "    chart = None\n",
     "    for i, cv_predictions_i in enumerate(cv_predictions):\n",
@@ -1012,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd547c74",
+   "id": "2898e104",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1034,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11fedc16",
+   "id": "65ebea73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4380f9fc",
+   "id": "761d8a8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b26a6a68",
+   "id": "662b15b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b86c2c",
+   "id": "6b0c890b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c31d9d2",
+   "id": "305184ec",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1107,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21c0f895",
+   "id": "c57d1570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b75f971",
+   "id": "7e85dcab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46b82091",
+   "id": "a85471ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1300790c",
+   "id": "c66c252f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e238e7d6",
+   "id": "2f9f3211",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e107fba",
+   "id": "c5ae655f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f432179b",
+   "id": "4f6a3769",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4df04c2",
+   "id": "47225475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5d875e5",
+   "id": "98e0e90a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bc0eb39",
+   "id": "f3237eae",
    "metadata": {},
    "outputs": [],
    "source": []
