--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "18241a98",
+   "id": "448b3ea1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8e0690c",
+   "id": "e9c2f99a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b22f0e2",
+   "id": "0e380870",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efd44d78",
+   "id": "156e1f3f",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e504d71d",
+   "id": "2d44cbd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70bfafa4",
+   "id": "94b616fc",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d76d8775",
+   "id": "752d9263",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "682b6f8e",
+   "id": "ea4df55e",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b9b7369",
+   "id": "f48b5099",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eb4e3d2",
+   "id": "24d2108b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "214e46be",
+   "id": "27881b31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec6fb791",
+   "id": "929e1f05",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0444498",
+   "id": "8375d980",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69f14cbe",
+   "id": "3c077692",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "634b8b33",
+   "id": "d448d467",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "274999d2",
+   "id": "05a839a3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0a41581",
+   "id": "12447c30",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a54e99",
+   "id": "5883083d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33b9d7cb",
+   "id": "92a3c819",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ed21487",
+   "id": "e768f16e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d175382",
+   "id": "0b74f8c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f41cdb9e",
+   "id": "a0059512",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5ec3124",
+   "id": "a88684e3",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef499868",
+   "id": "4d67ee37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd81acaa",
+   "id": "32b1e76c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d62f4fce",
+   "id": "1d36630c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23dc414b",
+   "id": "975e777f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9ea4877",
+   "id": "386479e6",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c74b2141",
+   "id": "dfb0ac3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b74457f2",
+   "id": "600fe891",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d6f13f6",
+   "id": "ea480110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed12ab9",
+   "id": "ec44b2b5",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea6552cd",
+   "id": "a00deb67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37fa0adb",
+   "id": "f5ababb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06038961",
+   "id": "383e4337",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ec2e802",
+   "id": "c0c94a6e",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "001ec5e4",
+   "id": "c7c799ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1c5b0ba",
+   "id": "de87cc0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3c322bf",
+   "id": "eebc1d63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b47169",
+   "id": "84c78c0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7efd3090",
+   "id": "681ebeac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53dadf00",
+   "id": "4e055bae",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc724b93",
+   "id": "21738f8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,10 +866,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05460028",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "de2d3b4a",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import make_scorer, mean_absolute_percentage_error, get_scorer\n",
@@ -894,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d405cd5e",
+   "id": "e153fe2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dea61ad7",
+   "id": "9de5496a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -948,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41c90a70",
+   "id": "a6e699f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,24 +955,14 @@
     "\n",
     "def plot_reliability_diagram(cv_predictions, n_bins=10):\n",
     "    # min and max load over all predictions and observations for any folds:\n",
-    "    min_load = np.min(\n",
+    "    all_loads = pl.concat(\n",
     "        [\n",
-    "            min(\n",
-    "                cv_prediction[\"load_mw\"].min(),\n",
-    "                cv_prediction[\"predicted_load_mw\"].min(),\n",
-    "            )\n",
+    "            cv_prediction.select([\"load_mw\", \"predicted_load_mw\"])\n",
     "            for cv_prediction in cv_predictions\n",
     "        ]\n",
     "    )\n",
-    "    max_load = np.max(\n",
-    "        [\n",
-    "            max(\n",
-    "                cv_prediction[\"load_mw\"].max(),\n",
-    "                cv_prediction[\"predicted_load_mw\"].max(),\n",
-    "            )\n",
-    "            for cv_prediction in cv_predictions\n",
-    "        ]\n",
-    "    )\n",
+    "    all_loads = pl.concat(all_loads[\"load_mw\", \"predicted_load_mw\"])\n",
+    "    min_load, max_load = all_loads.min(), all_loads.max()\n",
     "    scale = altair.Scale(domain=[min_load, max_load])\n",
     "    chart = None\n",
     "    for i, cv_predictions_i in enumerate(cv_predictions):\n",
@@ -1012,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b491b42",
+   "id": "3b6bee0c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1034,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05304105",
+   "id": "958c26fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25f1bf97",
+   "id": "ea1c2e1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e89a28a",
+   "id": "0b249732",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b6ee7b1",
+   "id": "bf6ce680",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e775245f",
+   "id": "09a40d0f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1107,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de8487d9",
+   "id": "158bc33c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48421a2b",
+   "id": "bbd85fba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a45ecfe",
+   "id": "d8f511c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b78ff634",
+   "id": "05f2dd50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc5f46e4",
+   "id": "b0a30c96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac45ec81",
+   "id": "138af3aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c789c3ed",
+   "id": "0edc61ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5236b07",
+   "id": "37334390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48a0ae8a",
+   "id": "314e8c32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e182e27",
+   "id": "79383806",
    "metadata": {},
    "outputs": [],
    "source": []
