[ci skip] Missing imports for pyodide bfae9bca9fe74a386056091383b58f676970d5ed

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "69ed6a27",
+   "id": "f68b4b76",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,20 +40,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "174e20e5",
+   "id": "6d72188a",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "outputs": [],
    "source": [
     "%pip install -q https://pypi.anaconda.org/ogrisel/simple/polars/1.24.0/polars-1.24.0-cp39-abi3-emscripten_3_1_58_wasm32.whl\n",
-    "%pip install -q altair holidays https://pypi.anaconda.org/ogrisel/simple/skrub/0.6.dev0/skrub-0.6.dev0-py3-none-any.whl"
+    "%pip install -q https://pypi.anaconda.org/ogrisel/simple/skrub/0.6.dev0/skrub-0.6.dev0-py3-none-any.whl\n",
+    "%pip install -q altair holidays plotly nbformat"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81970a3f",
+   "id": "386f973f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03ab53ac",
+   "id": "63cd2585",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -96,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8da8a6d",
+   "id": "eda55af0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95e4d3ff",
+   "id": "047e0513",
    "metadata": {},
    "source": [
     "\n",
@@ -131,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2da25799",
+   "id": "45b39ef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dda7283",
+   "id": "686d732e",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3baf392",
+   "id": "beccb021",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a2a0dbf",
+   "id": "a9405687",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1fb5c0a",
+   "id": "e44e4388",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2fdb315",
+   "id": "6a88ec9b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -219,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8247bc33",
+   "id": "92ceddfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab0057c9",
+   "id": "b00012cb",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -264,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc2504e6",
+   "id": "c1a21d20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecb8946e",
+   "id": "fc30aaed",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -300,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd293ab5",
+   "id": "10bda6c3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -317,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1c5a49c",
+   "id": "e8cfdeb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04adba78",
+   "id": "d64d3b38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b9a6f34",
+   "id": "05ac2f1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6c5797",
+   "id": "a9feeb59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f008de",
+   "id": "7a2d0c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "294b7344",
+   "id": "449b2ce2",
    "metadata": {},
    "source": [
     "\n",
@@ -416,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4aa0bd4",
+   "id": "aaea1ed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5a4a523",
+   "id": "991bb916",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -445,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98da88b1",
+   "id": "86c94580",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b937256e",
+   "id": "92df6d8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70bb6d71",
+   "id": "c840ace4",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -515,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7866831a",
+   "id": "e9f741d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f5e9e29",
+   "id": "53514b7c",
    "metadata": {},
    "source": [
     "\n",
@@ -537,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "343bc6b8",
+   "id": "05c7bb1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8da382b9",
+   "id": "a2a39ba2",
    "metadata": {},
    "source": [
     "\n",
@@ -560,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "432e5a73",
+   "id": "27a49145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4a062d4",
+   "id": "d8cd4529",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd41945",
+   "id": "d44908c2",
    "metadata": {},
    "source": [
     "\n",
@@ -629,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d00f96e",
+   "id": "3bde9f1c",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -641,8 +642,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb2ffab1",
-   "metadata": {},
+   "id": "8096598f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "prediction_time = time = skrub.var(\n",
@@ -662,13 +665,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ec65ecf",
+   "id": "7693adc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars.selectors as cs\n",
-    "\n",
-    "\n",
     "@skrub.deferred\n",
     "def build_features(\n",
     "    prediction_time,\n",
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5b9e4bb",
+   "id": "e7a36a96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40a48565",
+   "id": "bd43c2aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad931deb",
+   "id": "2e687e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25cbd56d",
+   "id": "cc22491f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a58e0a5a",
+   "id": "f1d38bf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e638666c",
+   "id": "9a0a1e8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56cf92f2",
+   "id": "4963566b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2473ca62",
+   "id": "8ac31364",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15c188b0",
+   "id": "a098121c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad819eb1",
+   "id": "3721d17d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1034,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ad07268",
+   "id": "73140a1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d502ef95",
+   "id": "78340361",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e8732ce",
+   "id": "a6383b14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfd47405",
+   "id": "e52d974f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70ba30f4",
+   "id": "e762cba3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89b7ed64",
+   "id": "3ff1e2b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "287d5e29",
+   "id": "f8fb73e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecbb967f",
+   "id": "b55f40a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93e12868",
+   "id": "119e970e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afd5921b",
+   "id": "1bfbf5a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d67e20b",
+   "id": "787b8d8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c56357c6",
+   "id": "4ff043eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17964a8a",
+   "id": "f1b26fb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b80a070",
+   "id": "d5bde993",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5beb3ba0",
+   "id": "7171597b",
    "metadata": {},
    "outputs": [],
    "source": []
