--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "17ee43e3",
+   "id": "3c2e6cca",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,20 +40,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3abc4caa",
+   "id": "2472177f",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "outputs": [],
    "source": [
     "%pip install -q https://pypi.anaconda.org/ogrisel/simple/polars/1.24.0/polars-1.24.0-cp39-abi3-emscripten_3_1_58_wasm32.whl\n",
-    "%pip install -q altair holidays https://pypi.anaconda.org/ogrisel/simple/skrub/0.6.dev0/skrub-0.6.dev0-py3-none-any.whl"
+    "%pip install -q https://pypi.anaconda.org/ogrisel/simple/skrub/0.6.dev0/skrub-0.6.dev0-py3-none-any.whl\n",
+    "%pip install -q altair holidays plotly nbformat"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7154d6d",
+   "id": "49e38736",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c16a1254",
+   "id": "81c02211",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -96,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c061d025",
+   "id": "2e119726",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd518e5c",
+   "id": "35c447de",
    "metadata": {},
    "source": [
     "\n",
@@ -131,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bf3950a",
+   "id": "9a8b1aea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b277708",
+   "id": "29b2e0cc",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "093dfc66",
+   "id": "cdf6aed4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f68c814",
+   "id": "05544073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71b8a1d7",
+   "id": "efe47c7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72924b37",
+   "id": "7b236738",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -219,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f0d31a7",
+   "id": "6799d801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dafca952",
+   "id": "e740c041",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -264,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "352755ba",
+   "id": "8872daa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ccfe522",
+   "id": "31b19fcb",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -300,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "993eaac1",
+   "id": "ee8f551a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -317,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "815e17d0",
+   "id": "98c6c20d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36cc7354",
+   "id": "669acd01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eb166c2",
+   "id": "92af380e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac2e97b4",
+   "id": "3a504e94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b087bbd2",
+   "id": "e5b0ccf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d98469a",
+   "id": "d0b3776d",
    "metadata": {},
    "source": [
     "\n",
@@ -416,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9ce56bb",
+   "id": "cc975391",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb69f07f",
+   "id": "5a9a3555",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -445,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17126ab1",
+   "id": "9a99970b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d098f65c",
+   "id": "a218a597",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad3da86f",
+   "id": "02846cc8",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -515,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e6f1116",
+   "id": "d54f9cea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41612bd1",
+   "id": "05b5d98a",
    "metadata": {},
    "source": [
     "\n",
@@ -537,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e973081",
+   "id": "63d62c7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2215c38b",
+   "id": "b4c3d1ca",
    "metadata": {},
    "source": [
     "\n",
@@ -560,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2ba3675",
+   "id": "152ea9e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0b90f74",
+   "id": "8c49162a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd23218e",
+   "id": "763a6519",
    "metadata": {},
    "source": [
     "\n",
@@ -629,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec0f823a",
+   "id": "f3d9176c",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -641,8 +642,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d7d3884",
-   "metadata": {},
+   "id": "11451e2f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "prediction_time = time = skrub.var(\n",
@@ -662,13 +665,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90257c1e",
+   "id": "78556dd5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars.selectors as cs\n",
-    "\n",
-    "\n",
     "@skrub.deferred\n",
     "def build_features(\n",
     "    prediction_time,\n",
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "209ae10f",
+   "id": "30f1ad6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aee74d6",
+   "id": "0185a101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39dff989",
+   "id": "a72288d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9641c9e5",
+   "id": "d7f0ce9e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9c73445",
+   "id": "3fefa9ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13fd8aee",
+   "id": "eebadaf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0acd3c3",
+   "id": "518a21cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b555136",
+   "id": "adabb67a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1339e50d",
+   "id": "eec6b21e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9188f54b",
+   "id": "9b6b3385",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1034,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "def0ac46",
+   "id": "e9468a94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aaf9f3f",
+   "id": "c326d416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "307912c9",
+   "id": "09c9fe9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab90da94",
+   "id": "e811bb44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ee1218b",
+   "id": "707b81e8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "366a22d8",
+   "id": "a4ec1f8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4370dca",
+   "id": "6b08e8f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d41d7e99",
+   "id": "812996e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba60aa75",
+   "id": "065d8b89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1598963",
+   "id": "94d4f7ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaf15c2a",
+   "id": "f6de6f28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9add83c7",
+   "id": "fb19e79a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "444be8dc",
+   "id": "6d155571",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59b5c66c",
+   "id": "f3ad0f12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5670899",
+   "id": "f15303fe",
    "metadata": {},
    "outputs": [],
    "source": []
